[project]
name = "modbus-simulator"
version = "0.1.0"
description = ""
authors = [
    {name = "Corey Bird",email = "birdcorey@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymodbus (>=3.13.0,<4.0.0)",
    "obsws-python (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
